homepage overflow fix

--- a/assets/css/_globals.pcss
+++ b/assets/css/_globals.pcss
@@ -15,7 +15,7 @@ body {
   background-color: var(--bg);
   color: var(--text);
   transition: all 0.5s ease;
-  scroll-padding-top: 8rem;
+  overflow: hidden;
   font-variant-ligatures: normal;
   hyphens: auto;
   font-variant-ligatures: normal;
